# crates

./: pyproject.toml
crates/: main.py  parser.py
tests/: test_crates.py
