[tool.poetry]
name = "crates"
version = "0.1.0"
description = ""
authors = ["Michael Hardin <mhardinla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipdb = "^0.13.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
